# Computer-Graphics-Labs

./: README.md
Lab0 Intro/: README.md  Shader.glsl
Lab1 Shaders & Project Setup/: CMakeLists.txt  README.md  main.cpp
Lab1 Shaders & Project Setup/assets/shaders/: simple.frag  simple.vert
Lab2 More Shaders/: CMP3060 - Lab 2 - More Shaders + Buffers.pptx  README.md
Lab2 More Shaders/1.Varyings/: README.md  main.cpp
Lab2 More Shaders/1.Varyings/assets/shaders/: simple.frag  simple.vert
Lab2 More Shaders/2.Uniform/: CMakeLists.txt  README.md  main.cpp
Lab2 More Shaders/2.Uniform/assets/shaders/: simple.frag  simple.vert
Lab2 More Shaders/3.Attribute/: README.md  main.cpp
Lab2 More Shaders/3.Attribute/assets/shaders/: simple.vert
Lab2 More Shaders/3.Draw A square/: README.md  main.cpp
Lab2 More Shaders/3.Draw A square/assets/shaders/: simple.vert
Lab2 More Shaders/Lab2-/: README.md  main.cpp
Lab2 More Shaders/Lab2-/assets/shaders/: simple.frag  simple.vert
Lab4 Textures/Lab4/: CMakeLists.txt  main.cpp
Lab4 Textures/Lab4/assets/shaders/: simple.frag  simple.vert
